pkg/lang/testdata/ub/configurations/invalid/long-key.ub
configurations: {
  aws.default.extra: { region: 'x' }
}
